--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.7",
     "multiselect-react-dropdown": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
+    "react-select": "^4.3.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
